--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet"  href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
   </head>
   <body>
   	<header>
-  		<h1>Заголовок</h1>
+  		<div class="topmenu_line">
+  		</div>
+  		<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+  		<nav>
+  			<ul>
+  				<li><a href="">Главная</a></li>
+  				<li><a href="">Компания</a></li>
+  				<li><a href="">Каталог</a></li>
+  				<li><a href="">Новости</a></li>
+  				<li><a href="">Спецпредложения</a></li>	
+  				<li><a href="">Доставка</a></li>
+  				<li><a href="">Контакты</a></li>
+  			</ul>
+  		</nav>
+
+
+
   		
   	</header>
   	<main>
