--- a/catalog.html
+++ b/catalog.html
@@ -8,17 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
   </head>
-    <head>
-    <meta charset="utf-8">
-    <title>Интернет-магазин «Техномарт»</title>
-    <link rel="stylesheet"  href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  </head>
   <body>
   <header class="main-header">
-    <section>
+    <section class="header-top-menu">
       <a class="main-header-logo" href="index.html">
         <img src="img/index-logo.svg" width="" height="" alt="Логотип интернет-магазина «Техномарт»">
       </a>
@@ -29,8 +21,8 @@
       <span class="header-order"><a href="order.html">Оформить заказ</a></span>
 
     </section>
-    <section>
-      <h1>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</h1>
+    <section class="header-middle">
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <p class="header-contacts">
         <span>+7(812)555-05-55</span><br>
         г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8
@@ -69,16 +61,12 @@
         <h3 class="visually-hidden">Выбранный инструмент</h3>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <h4>
               <a href="catalog-item.html">
                 <span class="catalog-category">Перфоратор Bosh</span>
                 <span class="catalog-item-title">BFG 3000</span>
               </a>
-            </h4>
             <p class="catalog-item-image">
-              <a href="catalog-item.html">
                 <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
-              </a>
             </p>
             <p class="catalog-item-price">
               <span class="old-price"></span>
@@ -86,10 +74,13 @@
               <a class="buy-now" href="#">Купить</a>
               <a class="bookmark" href="bookmarks.html">В закладки</a>
             </p>
+          </li>
+        </ul>
+      </section>
           
   </main>
-    <footer>
-    <section>
+    <footer class="main-footer">
+    <section class="footer-menu">
       <a class="footer-logo" href="index.html">
         <img src="img/footer-logo.svg" width="" height="" alt="Логотип интернет-магазина «Техномарт»">
       </a>
@@ -115,13 +106,11 @@
         2010-2019 Компания «Техномарт»<br>
         Все права защищены
       </p>
-      <div class="footer-social">
-        <ul>
+        <ul class="social">
           <li><a class="social" href="#"><img src="vk-icon.png" alt="Вконтакте">Вконтакте</a></li>
           <li><a class="social" href="#"><img src="facebook-icon.png" alt="Фэйсбук"></a></li>
           <li><a class="social" href="#"><img src="instagram-icon.png" alt="Инстаграм"></a></li>
         </ul>
-      </div>
       <p class="footer-feedback">
         Обратная связь:<br> 
         <a  href="#">mail@htmlecademy.ru</a>
