--- a/catalog.html
+++ b/catalog.html
@@ -61,16 +61,127 @@
       <h3 class="visually-hidden">Выбранный инструмент</h3>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <a href="catalog-item.html">
-            <span class="catalog-category">Перфоратор Bosh</span>
-            <span class="catalog-item-title">BFG 3000</span>
+          <a href="catalog-item1.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
           </a>
           <p class="catalog-item-image">
             <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
           </p>
           <p class="catalog-item-price">
-            <span class="old-price"></span>
+            <span class="old-price">22 500₽</span>
             <a class="button-buy" href="#">15 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item2.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price">30 500₽</span>
+            <a class="button-buy" href="#">25 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item3.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price"></span>
+            <a class="button-buy" href="#">12 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item1.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price">22 500₽</span>
+            <a class="button-buy" href="#">15 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item2.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price">30 500₽</span>
+            <a class="button-buy" href="#">25 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item3.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price"></span>
+            <a class="button-buy" href="#">12 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item1.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price">22 500₽</span>
+            <a class="button-buy" href="#">15 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item2.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price">30 500₽</span>
+            <a class="button-buy" href="#">25 500₽</a>
+            <a class="buy-now" href="#">Купить</a>
+            <a class="bookmark" href="bookmarks.html">В закладки</a>
+          </p>
+        </li>
+        <li class="catalog-item">
+          <a href="catalog-item3.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
+          </a>
+          <p class="catalog-item-image">
+            <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+          </p>
+          <p class="catalog-item-price">
+            <span class="old-price"></span>
+            <a class="button-buy" href="#">12 500₽</a>
             <a class="buy-now" href="#">Купить</a>
             <a class="bookmark" href="bookmarks.html">В закладки</a>
           </p>
