--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         Все права защищены
         </p>
         <ul class="social">
-          <li><a class="social" href="#"><img src="vk-icon.png" alt="Вконтакте">Вконтакте</a></li>
-          <li><a class="social" href="#"><img src="facebook-icon.png" alt="Фэйсбук"></a></li>
-          <li><a class="social" href="#"><img src="instagram-icon.png" alt="Инстаграм"></a></li>
+          <li><a class="social" href="#"><img src="vk-icon.svg" alt="Вконтакте"></a></li>
+          <li><a class="social" href="#"><img src="facebook-icon.svg" alt="Фэйсбук"></a></li>
+          <li><a class="social" href="#"><img src="instagram-icon.svg" alt="Инстаграм"></a></li>
         </ul>
         <p class="footer-feedback">
         Обратная связь:<br> 
