--- a/catalog.html
+++ b/catalog.html
@@ -61,12 +61,12 @@
       <h3 class="visually-hidden">Выбранный инструмент</h3>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <a href="catalog-item1.html">
-            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
-          </a>
           <p class="catalog-item-image">
             <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
           </p>
+          <a href="catalog-item1.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
+          </a>
           <p class="catalog-item-price">
             <span class="old-price">22 500₽</span>
             <a class="button-buy" href="#">15 500₽</a>
@@ -75,12 +75,12 @@
           </p>
         </li>
         <li class="catalog-item">
-          <a href="catalog-item2.html">
-            <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
-          </a>
           <p class="catalog-item-image">
             <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
           </p>
+          <a href="catalog-item2.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
+          </a>
           <p class="catalog-item-price">
             <span class="old-price">30 500₽</span>
             <a class="button-buy" href="#">25 500₽</a>
@@ -88,13 +88,13 @@
             <a class="bookmark" href="bookmarks.html">В закладки</a>
           </p>
         </li>
-        <li class="catalog-item">
-          <a href="catalog-item3.html">
-            <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
-          </a>
+        <li class="catalog-item-new">
           <p class="catalog-item-image">
             <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
           </p>
+          <a href="catalog-item3.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
+          </a>
           <p class="catalog-item-price">
             <span class="old-price"></span>
             <a class="button-buy" href="#">12 500₽</a>
@@ -103,12 +103,12 @@
           </p>
         </li>
         <li class="catalog-item">
-          <a href="catalog-item1.html">
-            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
-          </a>
           <p class="catalog-item-image">
             <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
           </p>
+          <a href="catalog-item4.html">
+            <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
+          </a>
           <p class="catalog-item-price">
             <span class="old-price">22 500₽</span>
             <a class="button-buy" href="#">15 500₽</a>
@@ -116,13 +116,13 @@
             <a class="bookmark" href="bookmarks.html">В закладки</a>
           </p>
         </li>
-        <li class="catalog-item">
-          <a href="catalog-item2.html">
+        <li class="catalog-item-new">
+          <p class="catalog-item-image">
+            <img src="img/product-5.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+          </p>
+          <a href="catalog-item5.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
           </a>
-          <p class="catalog-item-image">
-            <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
-          </p>
           <p class="catalog-item-price">
             <span class="old-price">30 500₽</span>
             <a class="button-buy" href="#">25 500₽</a>
@@ -131,12 +131,12 @@
           </p>
         </li>
         <li class="catalog-item">
-          <a href="catalog-item3.html">
+          <p class="catalog-item-image">
+            <img src="img/product-6.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+          </p>
+          <a href="catalog-item6.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
           </a>
-          <p class="catalog-item-image">
-            <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
-          </p>
           <p class="catalog-item-price">
             <span class="old-price"></span>
             <a class="button-buy" href="#">12 500₽</a>
@@ -144,13 +144,13 @@
             <a class="bookmark" href="bookmarks.html">В закладки</a>
           </p>
         </li>
-        <li class="catalog-item">
-          <a href="catalog-item1.html">
+        <li class="catalog-item-new">
+          <p class="catalog-item-image">
+            <img src="img/product-7.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
+          </p>
+          <a href="catalog-item7.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
           </a>
-          <p class="catalog-item-image">
-            <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
-          </p>
           <p class="catalog-item-price">
             <span class="old-price">22 500₽</span>
             <a class="button-buy" href="#">15 500₽</a>
@@ -159,12 +159,12 @@
           </p>
         </li>
         <li class="catalog-item">
-          <a href="catalog-item2.html">
+          <p class="catalog-item-image">
+            <img src="img/product-8.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+          </p>
+          <a href="catalog-item8.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
           </a>
-          <p class="catalog-item-image">
-            <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
-          </p>
           <p class="catalog-item-price">
             <span class="old-price">30 500₽</span>
             <a class="button-buy" href="#">25 500₽</a>
@@ -173,12 +173,12 @@
           </p>
         </li>
         <li class="catalog-item">
-          <a href="catalog-item3.html">
+          <p class="catalog-item-image">
+            <img src="img/product-9.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+          </p>
+          <a href="catalog-item9.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
           </a>
-          <p class="catalog-item-image">
-            <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
-          </p>
           <p class="catalog-item-price">
             <span class="old-price"></span>
             <a class="button-buy" href="#">12 500₽</a>
@@ -218,9 +218,9 @@
         Все права защищены
         </p>
         <ul class="social">
-          <li><a class="social" href="#"><img src="vk-icon.png" alt="Вконтакте">Вконтакте</a></li>
-          <li><a class="social" href="#"><img src="facebook-icon.png" alt="Фэйсбук"></a></li>
-          <li><a class="social" href="#"><img src="instagram-icon.png" alt="Инстаграм"></a></li>
+          <li><a class="social" href="#"><img src="vk-icon.svg" alt="Вконтакте"></a></li>
+          <li><a class="social" href="#"><img src="facebook-icon.svg" alt="Фэйсбук"></a></li>
+          <li><a class="social" href="#"><img src="instagram-icon.svg" alt="Инстаграм"></a></li>
         </ul>
         <p class="footer-feedback">
         Обратная связь:<br> 
