--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header class="main-header">
     <section class="header-top-menu">
       <a class="main-header-logo" href="index.html">
-        <img src="img/index-logo.svg" width="" height="" alt="Логотип интернет-магазина «Техномарт»">
+        <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
       </a>
       <span class="header-search">Поиск:</span>
       <!-- добавится форма поиска по сайту -->
@@ -46,7 +46,7 @@
   </header>
   <main class="container">
   	<ul class="breadcrumbs">
-        <li><a href="index.html"><img src="home-logo.png" alt="На главную"></a></li>
+        <li><a href="index.html"><img src="img/home-logo.svg" width="" height="" alt="На главную"></a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="tools.html">Инструмент</a></li>
         <li class="breadcrumbs-current">Перфораторы</li>
@@ -62,7 +62,7 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <p class="catalog-item-image">
-            <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
+            <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 3000">
           </p>
           <a href="catalog-item1.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
@@ -76,7 +76,7 @@
         </li>
         <li class="catalog-item">
           <p class="catalog-item-image">
-            <img src="img/product-2.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+            <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 6000">
           </p>
           <a href="catalog-item2.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
@@ -90,7 +90,7 @@
         </li>
         <li class="catalog-item-new">
           <p class="catalog-item-image">
-            <img src="img/product-3.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+            <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 2000">
           </p>
           <a href="catalog-item3.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
@@ -104,7 +104,7 @@
         </li>
         <li class="catalog-item">
           <p class="catalog-item-image">
-            <img src="img/product-1.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
+            <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 3000">
           </p>
           <a href="catalog-item4.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
@@ -118,7 +118,7 @@
         </li>
         <li class="catalog-item-new">
           <p class="catalog-item-image">
-            <img src="img/product-5.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+            <img src="img/product-5.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 6000">
           </p>
           <a href="catalog-item5.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
@@ -132,7 +132,7 @@
         </li>
         <li class="catalog-item">
           <p class="catalog-item-image">
-            <img src="img/product-6.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+            <img src="img/product-6.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 2000">
           </p>
           <a href="catalog-item6.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
@@ -146,7 +146,7 @@
         </li>
         <li class="catalog-item-new">
           <p class="catalog-item-image">
-            <img src="img/product-7.jpg" width="" height="" alt="Перфоратор Bosh BFG 3000">
+            <img src="img/product-7.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 3000">
           </p>
           <a href="catalog-item7.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
@@ -160,7 +160,7 @@
         </li>
         <li class="catalog-item">
           <p class="catalog-item-image">
-            <img src="img/product-8.jpg" width="" height="" alt="Перфоратор Bosh BFG 6000">
+            <img src="img/product-8.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 6000">
           </p>
           <a href="catalog-item8.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
@@ -174,7 +174,7 @@
         </li>
         <li class="catalog-item">
           <p class="catalog-item-image">
-            <img src="img/product-9.jpg" width="" height="" alt="Перфоратор Bosh BFG 2000">
+            <img src="img/product-9.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 2000">
           </p>
           <a href="catalog-item9.html">
             <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
@@ -193,7 +193,7 @@
     <footer class="main-footer">
       <section class="footer-menu">
         <a class="footer-logo" href="index.html">
-          <img src="img/footer-logo.svg" width="" height="" alt="Логотип интернет-магазина «Техномарт»">
+          <img src="img/logo.svg" width="136px" height="22px" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
           <li><a href="About.html">Компания</a></li>
@@ -218,9 +218,9 @@
         Все права защищены
         </p>
         <ul class="social">
-          <li><a class="social" href="#"><img src="vk-icon.svg" alt="Вконтакте"></a></li>
-          <li><a class="social" href="#"><img src="facebook-icon.svg" alt="Фэйсбук"></a></li>
-          <li><a class="social" href="#"><img src="instagram-icon.svg" alt="Инстаграм"></a></li>
+          <li><a class="social" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
+          <li><a class="social" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
+          <li><a class="social" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
         </ul>
         <p class="footer-feedback">
         Обратная связь:<br> 
