--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <section class="header-top-menu">
         <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="" height="" alt="Логотип интернет-магазина «Техномарт»">
+        <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <span class="header-search">Поиск:</span>
         <!-- добавится форма поиска по сайту -->
@@ -68,7 +68,7 @@
     <footer  class="main-footer">
       <section class="footer-menu">
         <a class="footer-logo">
-          <img src="img/footer-logo.svg" width="" height="" alt="Логотип интернет-магазина «Техномарт»">
+          <img src="img/logo.svg" width="136px" height="22px" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
           <li><a href="About.html">Компания</a></li>
@@ -93,9 +93,9 @@
         Все права защищены
         </p>
         <ul class="social">
-          <li><a class="social" href="#"><img src="vk-icon.svg" alt="Вконтакте"></a></li>
-          <li><a class="social" href="#"><img src="facebook-icon.svg" alt="Фэйсбук"></a></li>
-          <li><a class="social" href="#"><img src="instagram-icon.svg" alt="Инстаграм"></a></li>
+          <li><a class="social" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
+          <li><a class="social" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
+          <li><a class="social" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
         </ul>
         <p class="footer-feedback">
         Обратная связь:<br> 
