--- a/catalog.html
+++ b/catalog.html
@@ -34,9 +34,9 @@
     </section>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li>Главная</li>
+        <li><a href="index.html">Главная</a></li>
         <li><a href="About.html">Компания</a></li>
-        <li  class="site-navigation-current"><a href="Catalog.html">Каталог</a></li>
+        <li class="site-navigation-current"><a>Каталог</a></li>
         <li><a href="News.html">Новости</a></li>
         <li><a href="Special.html">Спецпредложения</a></li>
         <li><a href="Dilivery.html">Доставка</a></li>
