--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
       <section class="contacts">
         <h2>КОНТАКТЫ</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <!--Будет карта   -->
-        <a class="botton" href="Contacts.html">ЗАБЛУДИЛИСЬ? НАПИШИТЕНАМ! </a>
-      
+        <a href="#""><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
+        <a class="botton" href="Contacts.html">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ! </a>
       </section>
     </main> 
     <footer  class="main-footer">
