--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
   </header>
   <main class="container">
   	<ul class="breadcrumbs">
-        <li><a href="index.html"><img src="img/home-logo.svg" width="" height="" alt="На главную"></a></li>
+        <li><a href="index.html"><img src="img/home-logo.svg" width="14" height="12" alt="На главную"></a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="tools.html">Инструмент</a></li>
         <li class="breadcrumbs-current">Перфораторы</li>
