--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="container">
       <!--Пропущенный блок-->
       <section class="popular-product"> <!-- Секция к бонусному заданию "популярные товары"-->
-        <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
+        <h2>Популярные товары:</h2>
         <a href="#" class="all-popular-product">Все популярные товары</a>
         <ul class="catalog-list-popular">
           <li class="catalog-item">
@@ -109,7 +109,7 @@
       <!-- Окончание секции к бонусному заданию "популярные товары"-->
       <section class="features">
         <h2 class="visually-hidden">Преимущества техномарта</h2>
-        <h3>КОМПАНИЯ ТЕХНОМАРТ</h3>
+        <h3>Компания Техномарт</h3>
         <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит любителей сэкономить на гастарбайтерах</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
         <ul class="transport-list">
@@ -121,10 +121,10 @@
       </section>
 
       <section class="contacts">
-        <h2>КОНТАКТЫ</h2>
+        <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="#""><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
-        <a class="botton" href="Contacts.html">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ! </a>
+        <a class="botton" href="Contacts.html">Заблудились? Напишите нам! </a>
       </section>
     </main> 
     <footer  class="main-footer">
