--- a/index.html
+++ b/index.html
@@ -43,7 +43,35 @@
       </nav> 
     </header>
     <main class="container">
-      <!--Пропущенный блок-->
+      <section class="tehnomart-goods">
+        <h2 class="visually-hidden">Товары компании Техномарт</h2>
+        <ul class="tehnomart-goods-group">
+          <li class="goods-group new-goods">
+            <strong>Материалы</strong>
+            <a href="#" class="catalog-materials">на любой вкус</a>
+          </li>
+          <li class="tools-group">
+            <strong>Инструмент</strong>
+            <a href="#" class="catalog-tools">на все случаи</a>
+          </li>
+          <li class="technic-group">
+            <strong>Техника</strong>
+            <a href="#" class="catalog-tools">для стройки</a>
+          </li>
+          <li class="drill-group">
+            <strong>Дрели</strong>
+            <a href="#" class="drill-tools">Соседям на радость</a>
+          </li>
+          <li class="discount-group">
+            <strong>Скидки 50%</strong>
+            <a href="#" class="catalog-tools">на 350 товаров</a>
+          </li>
+          <li class="free-dilivery-group">
+            <strong>Доставка</strong>
+            <a href="#" class="catalog-tools">Бесплатно</a>
+          </li>
+        </ul>
+      </section>
       <section class="popular-product"> <!-- Секция к бонусному заданию "популярные товары"-->
         <h2>Популярные товары:</h2>
         <a href="#" class="all-popular-product">Все популярные товары</a>
@@ -107,6 +135,53 @@
         </ul>
       </section>
       <!-- Окончание секции к бонусному заданию "популярные товары"-->
+      <!-- Популярные производители инструмента -->
+      <section class="popular-maker">
+        <h2>Популярные производители:</h2>
+        <a href="#" class="all-popular-maker">Все производители</a>
+        <ul class="popular-maker-list">
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/bosch-logo.jpg" width="" height="" alt="Инструмент производства Bosch"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/makita-logo.jpg" width="" height="" alt="Инструмент производства Makita"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/DeWalt-logo.jpg" width="" height="" alt="Инструмент производства DeWalt"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/interskol-logo.jpg" width="" height="" alt="Инструмент производства Интерскол"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/hitachi-logo.jpg" width="" height="" alt="Инструмент производства Hitachi"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/LG-logo.jpg" width="" height="" alt="Инструмент производства LG"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/AEG-logo.jpg" width="" height="" alt="Инструмент производства AEG"></a>
+          </li>
+          <li class="popular-maker-item">
+            <a href="#"><img src="img/Metabo-logo.jpg" width="" height="" alt="Инструмент производства Metabo"></a>
+          </li>
+        </ul>
+      </section>
+      <!-- Окончание секции к бонусному заданию "производители инструмента"-->
+      <!--Сервисы ТЕхномарта: доставка, гарантия, кредит-->
+      <section class="service">
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        <ul class="service-list">
+          <li><a href="#" class="service-list-current">Доставка</a></li> <!--Или это должна быть кнопка?-->
+          <li><a href="#">Гарантия</a></li> <!--Или это должна быть кнопка?-->
+          <li><a href="#">Кредит</a></li> <!--Или это должна быть кнопка?-->
+        </ul>
+        <div class="service-item-current">
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          <img src="img/truck.png" width="" height="" alt="">
+        </div>
+      </section>
       <section class="features">
         <h2 class="visually-hidden">Преимущества техномарта</h2>
         <h3>Компания Техномарт</h3>
@@ -119,7 +194,6 @@
         </ul>
         <a class="botton" href="About.html">Подробнее о компании</a>
       </section>
-
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
