--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#""><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
+        <a href="#"><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
         <a class="botton" href="Contacts.html">Заблудились? Напишите нам! </a>
       </section>
       <section class="modal modal-map">
