--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,7 @@
             </li>
             <li class="filter-option">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Hitachi" id="filter-Hitachi">
-              <label ="filter-Hitachi">Hitachi</label>              
+              <label for="filter-Hitachi">Hitachi</label>              
             </li>
           </ul>
         </fieldset>
