--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
           <li><button class="button service-list-button" type="button">Гарантия</button></li>
           <li><button class="button service-list-button" type="button">Кредит</button></li>
         </ul>
-        <div class="service-item-current">
+        <section class="service-delivery">
           <h3>Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
           <img src="img/truck.png" width="" height="" alt="">
-        </div>
+        </section>
       </section>
       <section class="features">
         <h2 class="visually-hidden">Преимущества техномарта</h2>
