--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
           </li>
           <li class="drill-group">
             <strong>Дрели</strong>
-            <a href="#" class="drill-tools">Соседям на радость</a>
+            <span>Соседям на радость</span>
+            <a href="#" class="drill-tools">Открыть каталог</a>
             <button "class="button gallery-button gallery-button-back"  type="button"">Назад</button>
             <button "class="button gallery-button gallery-button-next"  type="button"">Вперед</button>
           </li>
@@ -80,8 +81,10 @@
         </ul>
       </section>
       <section class="popular-product"> <!-- Секция к бонусному заданию "популярные товары"-->
-        <h2>Популярные товары:</h2>
-        <a href="#" class="all-popular-product">Все популярные товары</a>
+        <div class="popular-product-title">
+          <h2>Популярные товары:</h2>
+          <a href="#" class="all-popular-product">Все популярные товары</a>
+        </div>
         <ul class="catalog-list-popular">
           <li class="catalog-item">
             <p class="catalog-item-image">
