базовая стилизация Index и Catalog v1

--- a/catalog.html
+++ b/catalog.html
@@ -270,7 +270,7 @@
           <li><a href="Special.html">Спецпредложения</a></li>
         </ul>
       </section>
-      <section>
+      <section  class="rights-social-copyright">
         <p class="footer-rights">
         2010-2019 Компания «Техномарт»<br>
         Все права защищены
