--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
         <ul class="footer-secondary-nav">
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
-          <li><a href="#">Тнструмент</a></li>
+          <li><a href="#">Инструмент</a></li>
           <li><a href="Special.html">Спецпредложения</a></li>
         </ul>
       </section>
-      <section>
+      <section class="rights-social-copyright">
         <p class="footer-rights">
         2010-2019 Компания «Техномарт»<br>
         Все права защищены
