--- a/catalog.html
+++ b/catalog.html
@@ -257,7 +257,7 @@
               </li>
             </ul>
             <ul class="pagination-list">
-              <li class="pagination-item"><a>1</a></li>
+              <li class="pagination-item currient-pagination"><a>1</a></li>
               <li class="pagination-item"><a href="#">2</a></li>
               <li class="pagination-item"><a href="#">3</a></li>
               <li class="pagination-item"><a href="#">Следующая</a></li>
